@@ -1,5 +1,10 @@
 [b]Version 0.6.7[/b]:
 
+(2009-01-31)
+ * (Videopreview) Added a new option to remember the last folder used for
+   saving the preview image. If not checked, it will suggest the same
+   folder of the video to save the image.
+
 (2009-01-29)
  * Added two options (in the audio and subtitle menus) to allow the user to 
    enter the audio and subtitle delay (in milliseconds).
